CFT_Ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation template to create a Linux EC2 instance with Apache HTTP server hosting a simple website.

Resources:
  # Security Group for EC2
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0  # Open to all for SSH (use cautiously)
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0  # Open to all for HTTP

  # EC2 Instance
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro  # Free tier eligible instance
      ImageId: ami-0c02fb55956c7d316  # Amazon Linux 2 AMI (update as per your region)
      KeyName: !Ref KeyName
      SecurityGroups: 
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: ApacheWebServer
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<html><body><h1>Welcome to Your Apache Web Server created by Rajesh Nair!</h1></body></html>" > /var/www/html/index.html

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to allow SSH access to the instance
    Type: String

Outputs:
  WebsiteURL:
    Description: The URL of the Apache web server
    Value: !Sub "http://${EC2Instance.PublicIp}"

  InstancePublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
